--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
+  syncfusion_flutter_calendar: ^19.1.54+1
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
