--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/user.png
     - images/kelena_logo.png
     - images/google_logo.png
+    - images/teacher1.png
+    - images/teacher2.png
