--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -19,16 +19,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>kelena-210b8.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:14825091941:ios:6bd2f19cda04d6af9be78c</string>
+	<key>DATABASE_URL</key>
+	<string>https://kelena-210b8-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
