--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   syncfusion_flutter_calendar: ^19.1.54+1
   intl: ^0.17.0
   provider: ^4.3.3
+  cloud_firestore: ^1.0.0
+  firebase_core: "^1.1.0"
+  # firebase_database: "^6.0.0"
 
 
   # The following adds the Cupertino Icons font to your application.
